feat(blogs/tolkien): add guide audiobooks YouTube shortcut
Docs: https://gohugo.io/shortcodes/youtube/

--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -79,7 +79,7 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
   <meta itemprop="description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
 If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
 But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
-  <meta itemprop="wordCount" content="1645">
+  <meta itemprop="wordCount" content="1648">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -342,9 +342,13 @@ more about this society in <a href="/blogs/tolkien/#the-tolkien-society">its sec
 They may not be commercial hits, but they are worth reading.</p>
 <h2 id="audio-books">Audio books</h2>
 <h3 id="english">English</h3>
-<p><a href="https://www.youtube.com/watch?v=4uq6vlrfZPY">A <strong>Guide</strong> to Tolkien Audiobooks</a> by
-<a href="https://www.youtube.com/c/NerdoftheRings">Nerd of the Rings</a>.
-That&rsquo;s it. Those 12 minutes are gold!
+<p>A <strong>Guide</strong> to Tolkien Audiobooks by
+<a href="https://www.youtube.com/c/NerdoftheRings">Nerd of the Rings</a>:</p>
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+      <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; fullscreen" loading="lazy" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/4uq6vlrfZPY?autoplay=0&amp;controls=1&amp;end=0&amp;loop=0&amp;mute=0&amp;start=0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" title="YouTube video"></iframe>
+    </div>
+
+<p>That&rsquo;s it. These twelve minutes are of the finest mithril!
 This recommends <em>enhanced</em> audio books too, like:</p>
 <ul>
 <li>The <a href="https://archive.org/details/roast-moose">Hobbit</a> by <a href="https://www.youtube.com/@Bluefax">Bluefax</a>, which is free! Also enjoy its <a href="https://www.youtube.com/watch?v=30yW7a9g0vs&amp;list=PLHuqOGq8HdsKf6OcP-cCD6_mOODvMf0aT">making-of</a></li>
