--- a/public/de/index.html
+++ b/public/de/index.html
@@ -156,6 +156,10 @@ h1 {
   align-items: center;      
 }
 
+ 
+details.table-of-contents-all-bold-but-summary > :not(summary) {
+  font-weight: bold;
+}
 </style>
 
 
@@ -229,6 +233,11 @@ window.MathJax = {
 
 
 <script src="/js/tikzjax-node.min.679617c0048325b476a16f95d017ba0858e995ffdc938c4fa7f8b994e1e9d2a0.js" integrity="sha256-Z5YXwASDJbR2oW&#43;V0Be6CFjplf/ck4xPp/i5lOHp0qA=" defer></script>
+
+
+
+
+<link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
 </head>
   <body>
 
