--- a/public/blogs_index/index.html
+++ b/public/blogs_index/index.html
@@ -58,7 +58,7 @@
 <meta property="og:url" content="http://localhost:1313/blogs_index/">
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="JM - 💭 Blogs">
-  <meta property="og:description" content="&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing How to create an Instagram mosaic on the terminal">
+  <meta property="og:description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step &lt;/&gt; Web dev 🎨🧪 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing How to create an Instagram mosaic on the terminal">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="og:image" content="http://localhost:1313/images/cover-image.jpg">
@@ -67,12 +67,12 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="JM - 💭 Blogs">
-  <meta name="twitter:description" content="&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing How to create an Instagram mosaic on the terminal">
+  <meta name="twitter:description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step &lt;/&gt; Web dev 🎨🧪 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing How to create an Instagram mosaic on the terminal">
 
 
   <meta itemprop="name" content="JM - 💭 Blogs">
-  <meta itemprop="description" content="&lt;/&gt; Web dev 😎 Installing custom fonts: system-wide setup &amp; Hugo integration 🎨🧪 Color picker enhanced How to create a Hugo-scroll website $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing How to create an Instagram mosaic on the terminal">
-  <meta itemprop="wordCount" content="48">
+  <meta itemprop="description" content="Hugo How to create a Hugo-scroll website Hugo&#39;s shortcodes: step by step &lt;/&gt; Web dev 🎨🧪 Color picker enhanced $\LaTeX$ and $\text{Ti}\textit{k}\text{Z}$ for web dev 📚 Books Tolkien: books, podcasts and much more! 🖼️ Image editing How to create an Instagram mosaic on the terminal">
+  <meta itemprop="wordCount" content="45">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -156,6 +156,10 @@ h1 {
   align-items: center;      
 }
 
+ 
+details.table-of-contents-all-bold-but-summary > :not(summary) {
+  font-weight: bold;
+}
 </style>
 
 
@@ -229,6 +233,11 @@ window.MathJax = {
 
 
 <script src="/js/tikzjax-node.min.679617c0048325b476a16f95d017ba0858e995ffdc938c4fa7f8b994e1e9d2a0.js" integrity="sha256-Z5YXwASDJbR2oW&#43;V0Be6CFjplf/ck4xPp/i5lOHp0qA=" defer></script>
+
+
+
+
+<link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css"/>
 </head>
   <body>
   <main class="content page-template page-">
@@ -250,26 +259,35 @@ window.MathJax = {
 </div>
 
 
+<h3 id="hugo">Hugo</h3>
+
+
+<div class="html-content">
+  <div style="height: 0.5em;"></div> <!-- Half line break -->
+
+  <a href="/blogs/create_hugo_website/" class="no-underline-except-hover">
+  How to <strong>create</strong> a <strong>Hugo-scroll web</strong>site
+  </a>
+
+  <br>
+  <a href="/blogs/hugo_shortcodes/" class="no-underline-except-hover">
+  <strong>Hugo</strong>'s <strong>shortcodes</strong>: step by step
+  </a>
+
+  <br>
+  <br>
+  <br>
+</div>
+
+
 <h3 id="-web-dev">&lt;/&gt; Web dev</h3>
 
 
 <div class="html-content">
   <div style="height: 0.5em;"></div> <!-- Half line break -->
 
-  <a href="/blogs/nerd_fonts_and_more/" class="no-underline-except-hover">
-  😎 Installing 
-  <span style="font-family: 'Great Vibes', cursive; font-size: 3.1rem;">custom fonts</span>:
-  <strong>system</strong>-wide setup <strong>& Hugo</strong> integration
-  </a>
-
-  <br>
   <a href="/blogs/color_picker/" class="no-underline-except-hover">
   🎨🧪 <strong>Color picker</strong> enhanced
-  </a>
-
-  <br>
-  <a href="/blogs/create_hugo_website/" class="no-underline-except-hover">
-  How to <strong>create</strong> a <strong>Hugo-scroll web</strong>site
   </a>
 
   <br>
