fix(blogs/tolkien): minor

--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -79,7 +79,7 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
   <meta itemprop="description" content="Tolkien: books, podcasts and much more! Do you fancy the beauty of languages? Does the original, deep meaning of words (etymology) intrigue you? Do you find Norse (Scandinavian) mythology astonishing? Do you hold [Christian] values—such as holding your oath or the sacred bond of a true friendship?
 If you answered no to most of these questions, then perhaps you should choose another writer—and skip this post, of course!
 But for those who appreciate all these things… beware! Once Professor Tolkien enters your life, he lingers forever, impacting your soul—for good.">
-  <meta itemprop="wordCount" content="1648">
+  <meta itemprop="wordCount" content="1647">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
 
 
@@ -390,7 +390,7 @@ They even share <a href="https://www.tolkiengesellschaft.de/44866/5-tipps-fuer-e
 <p>If you want to <strong>contribute</strong>, in any language, please share your reading recordings in <a href="https://librivox.org">LibriVox</a>.
 This platform holds many public domain audio books (and more).
 Though <a href="https://librivox.org/author/1536?primary_key=1536">Tolkien&rsquo;s works in LibriVox</a> are almost none.
-Hopefully in <a href="https://archive.org/">Internet Archive</a> there are more than <strong>one thousand</strong> Tolkien related
+Luckily in <a href="https://archive.org/">Internet Archive</a> there are more than <strong>one thousand</strong> Tolkien related
 <a href="https://archive.org/search?query=tolkien&amp;and%5B%5D=mediatype%3A%22audio%22">audios</a>.</p>
 <h2 id="podcasts">Podcasts</h2>
 <p>Episodes that <strong>fly by</strong> as we:</p>
@@ -409,7 +409,7 @@ Hopefully in <a href="https://archive.org/">Internet Archive</a> there are more 
 <ul>
 <li><a href="https://www.youtube.com/@tolkienuntangled">Tolkien Untangled</a></li>
 <li><a href="https://www.youtube.com/c/NerdoftheRings">Nerd of the Rings</a></li>
-<li>And <a href="https://www.youtube.com/@Kai47">Kai47</a> for Spanish readers. Btw check his <a href="https://www.goodreads.com/author/show/20964301.Bernard_Torell_">novels</a>!</li>
+<li>And <a href="https://www.youtube.com/@Kai47">Kai47</a> for Spanish viewers. Btw check his <a href="https://www.goodreads.com/author/show/20964301.Bernard_Torell_">novels</a>!</li>
 </ul>
 <p><a href="https://www.youtube.com/@tolkienuntangled">Tolkien Untangled</a> is focused on Tolkien&rsquo;s writtings. So any of his videos is a flawless choice.
 Directly open a <a href="https://www.youtube.com/@tolkienuntangled/playlists">playlist</a> and watch all its videos in a row (during various days, optional).
@@ -489,7 +489,7 @@ Notice this is not an official <em>Smial</em> - these organizations are independ
 
 
 <p>For a full list of Middle-earth games, check <a href="https://en.wikipedia.org/wiki/List_of_Middle-earth_video_games">Wikipedia</a>.</p>
-<p>I played few, but <a href="https://en.wikipedia.org/wiki/The_Lord_of_the_Rings:_The_Battle_for_Middle-earth_II">The Battle for Middle-earth II</a>
+<p>I played a few, but <a href="https://en.wikipedia.org/wiki/The_Lord_of_the_Rings:_The_Battle_for_Middle-earth_II">The Battle for Middle-earth II</a>
 and its <a href="https://en.wikipedia.org/wiki/The_Lord_of_the_Rings:_The_Battle_for_Middle-earth_II:_The_Rise_of_the_Witch-king">expansion</a>
 keep a special place in my teen&rsquo;s memories.
 Back then I spent countless hours at a cybercafé with my friends, battling over Middle Earth.</p>
@@ -526,8 +526,8 @@ shall <em>restore light to forgotten glories</em> in years to come.</p>
 <p>Including original Tolkien artwork, fan art, and official illustrations.</p>
 <p>The most famous artist associated with <a href="https://en.wikipedia.org/wiki/Illustrating_Middle-earth">Middle Earth illustrations</a>
 is widely regarded as <a href="https://en.wikipedia.org/wiki/Alan_Lee_%28illustrator%29">Alan Lee</a>.
-My first <em>lotr</em> book had his <a href="https://tolkiengateway.net/wiki/File:Alan_Lee_-_The_Black_Gate_is_Closed.jpg">this</a>
-as cover. More <a href="https://tolkiengateway.net/wiki/Category:Images_by_Alan_Lee">here</a>.</p>
+My first <em>lotr</em> book had <a href="https://tolkiengateway.net/wiki/File:Alan_Lee_-_The_Black_Gate_is_Closed.jpg">his</a>
+cover. More <a href="https://tolkiengateway.net/wiki/Category:Images_by_Alan_Lee">here</a>.</p>
 <p>Ted Nasmith <a href="https://www.tednasmith.com/site-map/j-r-r-tolkien/">illustrations</a> are also well-known.
 The <a href="https://www.tednasmith.com/videos/">interviews</a> are also worth listening to.</p>
 <p>Not to mention Tolkien&rsquo;s own artwork:
