fix(homepage/about-me): languages minor

--- a/public/index.html
+++ b/public/index.html
@@ -658,8 +658,8 @@ window.MathJax = {
 <h5 id="languages">Languages</h5>
 <ul>
 <li>🇩🇪 To maintain my fluency in German I watch the <a href="https://www.tagesschau.de/">Tageschau</a> and reports on the <a href="https://www.ardmediathek.de/">ARD-Mediathek</a> daily. My favorite late-night show is <a href="https://www.ndr.de/fernsehen/sendungen/extra_3">extra 3</a> and the most hilarious comedian is <a href="https://www.youtube.com/c/HarryG_offiziell">Harry G</a>.</li>
-<li>🇨🇳 My Mandarin is improving too, but at a slower rate.</li>
-<li>🇬🇧 Since English is everywhere, I read, write, and listen to it a lot—but I don’t speak it as often.</li>
+<li>🇨🇳 My Mandarin is improving little by little.</li>
+<li>🇬🇧 Since English is everywhere, I read, write and listen to it a lot.</li>
 </ul>
 
                 </section>
