style(blogs_index):
Add to CSS class no-underline-except-hover:
 - display: block; /* Enable margins */
 - margin-bottom: 1.1em; /* Space between each <a> */

Create CSS class blogs_index with top- and bottom margins

--- a/public/blogs/hugo_shortcodes/index.html
+++ b/public/blogs/hugo_shortcodes/index.html
@@ -134,11 +134,20 @@ Index - Click to expand 📜 Go and Hugo code basics Shortcode templates vs call
  
 .no-underline-except-hover {
   text-decoration: none;     
-  line-height: 2.2em;  
+  line-height: 1.5em;  
+  display: block;  
+  margin-bottom: 1.1em;  
 }
 .no-underline-except-hover:hover {
   text-decoration: underline;   
 }
+
+ 
+.blogs_index {
+  margin-top: 1.5em;
+  margin-bottom: 2.5em;
+}
+
 
  
 .great-vibes {
