--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -137,11 +137,20 @@ But for those who appreciate all these things… beware! Once Professor Tolkien 
  
 .no-underline-except-hover {
   text-decoration: none;     
-  line-height: 2.2em;  
+  line-height: 1.5em;  
+  display: block;  
+  margin-bottom: 1.1em;  
 }
 .no-underline-except-hover:hover {
   text-decoration: underline;   
 }
+
+ 
+.blogs_index {
+  margin-top: 1.5em;
+  margin-bottom: 2.5em;
+}
+
 
  
 .great-vibes {
