--- a/public/license/index.html
+++ b/public/license/index.html
@@ -142,11 +142,20 @@ Permission is hereby granted, free of charge, to any person obtaining a copy of 
  
 .no-underline-except-hover {
   text-decoration: none;     
-  line-height: 2.2em;  
+  line-height: 1.5em;  
+  display: block;  
+  margin-bottom: 1.1em;  
 }
 .no-underline-except-hover:hover {
   text-decoration: underline;   
 }
+
+ 
+.blogs_index {
+  margin-top: 1.5em;
+  margin-bottom: 2.5em;
+}
+
 
  
 .great-vibes {
