--- a/public/blogs/latex_for_webdev/index.html
+++ b/public/blogs/latex_for_webdev/index.html
@@ -140,11 +140,20 @@ MathJax Support Block equations Error handling LaTeX packages Include extra pack
  
 .no-underline-except-hover {
   text-decoration: none;     
-  line-height: 2.2em;  
+  line-height: 1.5em;  
+  display: block;  
+  margin-bottom: 1.1em;  
 }
 .no-underline-except-hover:hover {
   text-decoration: underline;   
 }
+
+ 
+.blogs_index {
+  margin-top: 1.5em;
+  margin-bottom: 2.5em;
+}
+
 
  
 .great-vibes {
