--- a/public/blogs/tolkien/index.html
+++ b/public/blogs/tolkien/index.html
@@ -176,6 +176,13 @@ h1 {
 details.table-of-contents-all-bold-but-summary > :not(summary) {
   font-weight: bold;
 }
+
+
+ 
+ 
+blockquote.alert-caution *:not(p:first-of-type) {
+  color: red;
+}
 </style>
 
 
@@ -467,9 +474,14 @@ Thus, I&rsquo;ll just say&hellip; the <strong><a href="https://en.wikipedia.org/
 <h2 id="the-tolkien-society">The Tolkien Society</h2>
 <p>Meet fellow fans, further disscuss Tolkien&rsquo;s writting, celebre events and much more!
 <a href="https://www.tolkiensociety.org/">The Tolkien Society</a> summaries <a href="https://www.tolkiensociety.org/society/">its purposes</a> so:</p>
-<blockquote>
-<p>We are an educational charity and literary society devoted to the study and promotion of the life and works of the author and academic J.R.R. Tolkien.
-The Tolkien Society publishes a bulletin and a journal at regular intervals, and organises various events throughout the year.</p></blockquote>
+
+
+
+  <blockquote>
+    <p>We are an educational charity and literary society devoted to the study and promotion of the life and works of the author and academic J.R.R. Tolkien.
+The Tolkien Society publishes a bulletin and a journal at regular intervals, and organises various events throughout the year.</p>
+  </blockquote>
+
 <p>Find your local branch <a href="https://www.tolkiensociety.org/society/smials/">here</a> and join!</p>
 <p><strong>German</strong> speakers visit <a href="https://www.tolkiengesellschaft.de/">Deutschen Tolkien Gesellschaft e.V.</a> bitteschön.
 Notice this is not an official <em>Smial</em> - these organizations are independent.</p>
@@ -480,8 +492,13 @@ Notice this is not an official <em>Smial</em> - these organizations are independ
 <li>Tumblr: <a href="https://www.tumblr.com/search/lotr%20memes">-search</a>, <a href="https://l-o-t-r.tumblr.com/">l-o-t-r.tumblr.com</a>,&hellip;</li>
 </ul>
 <p>Extra. An amusing joke by <a href="https://x.com/BenTheKahn/status/1437158217390325764?lang=en">Ben Kahn</a></p>
-<blockquote>
-<p>Gandalf: <strong>Bad news</strong>, Sauron knows everything that Pippin knows. <strong>Good news</strong>, Pippin doesn’t know jack shit</p></blockquote>
+
+
+
+  <blockquote>
+    <p>Gandalf: <strong>Bad news</strong>, Sauron knows everything that Pippin knows. <strong>Good news</strong>, Pippin doesn’t know jack shit</p>
+  </blockquote>
+
 <h2 id="video-games">Video games</h2>
 <p>Did someone mention fun? More?? Wasn&rsquo;t this suppose to be about Tolkien&rsquo;s <strong>serious</strong> <a href="https://en.wikipedia.org/wiki/Tolkien%27s_legendarium">legendarium</a>?</p>
 
