--- a/public/index.html
+++ b/public/index.html
@@ -169,6 +169,13 @@ h1 {
 details.table-of-contents-all-bold-but-summary > :not(summary) {
   font-weight: bold;
 }
+
+
+ 
+ 
+blockquote.alert-caution *:not(p:first-of-type) {
+  color: red;
+}
 </style>
 
 
