--- a/public/blogs/create_hugo_website/index.html
+++ b/public/blogs/create_hugo_website/index.html
@@ -16,26 +16,7 @@
   <meta name="description" content="Juan Marinero - Data Scientist"
 />
 
-  <meta name="keywords" content="          Juan, Marinero, Spain, Europe, Spanish, English, German, Deutsch, Bilingual,
-          Remote Work, Contract, Full-time, Part-time, Job, Job Offer, Data Scientist,
-          Data Science, Machine Learning, AI, Artificial Intelligence, Python, R, SQL, 
-          Statistical Analysis, Data Visualization, Big Data, Deep Learning, Neural Networks, 
-          Predictive Modeling, Data Mining, A/B Testing, Feature Engineering, MLOps, 
-          Natural Language Processing, NLP, Computer Vision, Time Series Analysis, 
-          Cloud Computing, AWS, Azure, GCP, Docker, Kubernetes, TensorFlow, PyTorch, 
-          Scikit-learn, Pandas, NumPy, Spark, Hadoop,
-          ETL, Data Pipelines, Business Intelligence, Analytics, Experimentation, 
-          Reinforcement Learning, Bayesian Statistics, Regression, Classification, 
-          Clustering, Dimensionality Reduction, Optimization, Juan Marinero, Spain, 
-          Europe, Data Scientist, ML Engineer, AI Specialist, Quantitative Analysis, 
-          Research, PhD, Mathematics, Statistics, Programming, Data Governance, 
-          Ethics in AI, Explainable AI, Model Deployment, CI/CD, Agile, Scrum, 
-          Startup, Tech, Consulting, Finance, Healthcare, E-commerce, Retail, 
-          Marketing Analytics, Customer Segmentation, Recommendation Systems, 
-          Anomaly Detection, Fraud Detection, IoT, Edge Computing, Open Source, 
-          GitHub, Kaggle, Competitions, Publications, Research Papers, Teaching, 
-          Mentoring, Public Speaking, Conferences, Workshops, Technical Writing
-        "
+  <meta name="keywords" content="Hugo, static site generator, build a website, Jamstack, web development, GitHub Pages, markdown, Go templates, open source, fast websites, content management, front matter, themes, deployment, command line, git, web design, tutorial, step-by-step guide, blogging, developer tools, responsive design, HTML, CSS, Go programming language"
 />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -75,6 +56,7 @@
   <meta itemprop="description" content="Install Hugo Linux Windows Install Git Install Go Install Dash Install Hugo Test a Hugo repo Create a Hugo site with the hugo-scroll theme Get the zjedi/hugo-scroll website Customize Remove git dirs Order of markdowns hugo.toml Favicons, header-logo and cover-image Edit a mainpage section Edit a not mainpage CSS Raw HTML Deploy Create a GitHub repository Host on GitHub Wait for Github pages to be ready Rebuild before pushing Set up a custom domain Buy a domain Manage the DNS records for your domain The A records The CNAME records Set your domain on Github Add your domain to GitHub Pages settings Add your domain to a CNAME file Enforce HTTPS Bonus. The More You Know Apex Domains and the www subdomain Understanding CNAME Restrictions on Apex Domains GitHub Pages sites can be stored in any repository Hugo is not the only solution Publishing from a branch Publishing with a custom GitHub Actions workflow Install Hugo https://gohugo.io/getting-started/quick-start/#prerequisites">
   <meta itemprop="wordCount" content="3950">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
+  <meta itemprop="keywords" content="Hugo,static site generator,build a website,Jamstack,web development,GitHub Pages,markdown,Go templates,open source,fast websites,content management,front matter,themes,deployment,command line,git,web design,tutorial,step-by-step guide,blogging,developer tools,responsive design,HTML,CSS,Go programming language">
 
 
 
