feat(blogs/create_hugo_website): add metadata description
Meta descriptions can technically be any length,
but Google generally truncates snippets to 155-160 chars

--- a/public/blogs/create_hugo_website/index.html
+++ b/public/blogs/create_hugo_website/index.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
 
 
-  <meta name="description" content="Juan Marinero - Data Scientist"
+  <meta name="description" content="A step-by-step beginner’s guide on how to build websites with Hugo, covering installation, theme selection, writing Markdown content, and free deployment."
 />
 
   <meta name="keywords" content="Hugo, static site generator, build a website, Jamstack, web development, GitHub Pages, markdown, Go templates, open source, fast websites, content management, front matter, themes, deployment, command line, git, web design, tutorial, step-by-step guide, blogging, developer tools, responsive design, HTML, CSS, Go programming language"
@@ -39,7 +39,7 @@
 <meta property="og:url" content="http://localhost:1313/blogs/create_hugo_website/">
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="Create your own Hugo-scroll website">
-  <meta property="og:description" content="Install Hugo Linux Windows Install Git Install Go Install Dash Install Hugo Test a Hugo repo Create a Hugo site with the hugo-scroll theme Get the zjedi/hugo-scroll website Customize Remove git dirs Order of markdowns hugo.toml Favicons, header-logo and cover-image Edit a mainpage section Edit a not mainpage CSS Raw HTML Deploy Create a GitHub repository Host on GitHub Wait for Github pages to be ready Rebuild before pushing Set up a custom domain Buy a domain Manage the DNS records for your domain The A records The CNAME records Set your domain on Github Add your domain to GitHub Pages settings Add your domain to a CNAME file Enforce HTTPS Bonus. The More You Know Apex Domains and the www subdomain Understanding CNAME Restrictions on Apex Domains GitHub Pages sites can be stored in any repository Hugo is not the only solution Publishing from a branch Publishing with a custom GitHub Actions workflow Install Hugo https://gohugo.io/getting-started/quick-start/#prerequisites">
+  <meta property="og:description" content="A step-by-step beginner’s guide on how to build websites with Hugo, covering installation, theme selection, writing Markdown content, and free deployment.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="blogs">
@@ -49,11 +49,11 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="Create your own Hugo-scroll website">
-  <meta name="twitter:description" content="Install Hugo Linux Windows Install Git Install Go Install Dash Install Hugo Test a Hugo repo Create a Hugo site with the hugo-scroll theme Get the zjedi/hugo-scroll website Customize Remove git dirs Order of markdowns hugo.toml Favicons, header-logo and cover-image Edit a mainpage section Edit a not mainpage CSS Raw HTML Deploy Create a GitHub repository Host on GitHub Wait for Github pages to be ready Rebuild before pushing Set up a custom domain Buy a domain Manage the DNS records for your domain The A records The CNAME records Set your domain on Github Add your domain to GitHub Pages settings Add your domain to a CNAME file Enforce HTTPS Bonus. The More You Know Apex Domains and the www subdomain Understanding CNAME Restrictions on Apex Domains GitHub Pages sites can be stored in any repository Hugo is not the only solution Publishing from a branch Publishing with a custom GitHub Actions workflow Install Hugo https://gohugo.io/getting-started/quick-start/#prerequisites">
+  <meta name="twitter:description" content="A step-by-step beginner’s guide on how to build websites with Hugo, covering installation, theme selection, writing Markdown content, and free deployment.">
 
 
   <meta itemprop="name" content="Create your own Hugo-scroll website">
-  <meta itemprop="description" content="Install Hugo Linux Windows Install Git Install Go Install Dash Install Hugo Test a Hugo repo Create a Hugo site with the hugo-scroll theme Get the zjedi/hugo-scroll website Customize Remove git dirs Order of markdowns hugo.toml Favicons, header-logo and cover-image Edit a mainpage section Edit a not mainpage CSS Raw HTML Deploy Create a GitHub repository Host on GitHub Wait for Github pages to be ready Rebuild before pushing Set up a custom domain Buy a domain Manage the DNS records for your domain The A records The CNAME records Set your domain on Github Add your domain to GitHub Pages settings Add your domain to a CNAME file Enforce HTTPS Bonus. The More You Know Apex Domains and the www subdomain Understanding CNAME Restrictions on Apex Domains GitHub Pages sites can be stored in any repository Hugo is not the only solution Publishing from a branch Publishing with a custom GitHub Actions workflow Install Hugo https://gohugo.io/getting-started/quick-start/#prerequisites">
+  <meta itemprop="description" content="A step-by-step beginner’s guide on how to build websites with Hugo, covering installation, theme selection, writing Markdown content, and free deployment.">
   <meta itemprop="wordCount" content="3950">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
   <meta itemprop="keywords" content="Hugo,static site generator,build a website,Jamstack,web development,GitHub Pages,markdown,Go templates,open source,fast websites,content management,front matter,themes,deployment,command line,git,web design,tutorial,step-by-step guide,blogging,developer tools,responsive design,HTML,CSS,Go programming language">
