feat(blogs/hugo_shortcodes): add metadata description
Meta descriptions can technically be any length,
but Google generally truncates snippets to 155-160 chars

--- a/public/blogs/hugo_shortcodes/index.html
+++ b/public/blogs/hugo_shortcodes/index.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
 
 
-  <meta name="description" content="Juan Marinero - Data Scientist"
+  <meta name="description" content="Step-by-step guide to use built-in Hugo shortcodes for tweets, Instagram, YouTube, code highlights, QR, figures,... and create your own custom shortcodes."
 />
 
   <meta name="keywords" content="Hugo shortcodes, Hugo templates, static site generator, custom shortcodes, built-in shortcodes, content creation, Markdown extensions, Go HTML templates, Hugo partials, dynamic content, figure shortcode, gist shortcode, highlight shortcode, tweet shortcode, YouTube embed, Hugo functions, layout components, DRY principles, web development, content management, Hugo documentation, code examples, responsive embeds, customizable content, Hugo power features"
@@ -39,8 +39,7 @@
 <meta property="og:url" content="http://localhost:1313/blogs/hugo_shortcodes/">
   <meta property="og:site_name" content="J. Marinero - Data Scientist & AI Engineer">
   <meta property="og:title" content="Hugo shortcodes: step by step">
-  <meta property="og:description" content="Hugo brings pre-defined shortcodes to expand your content beyond the basic markdown syntax. The official docs explain them quite well. The goal of this post is to distill the essential information into concise, ready-to-use Minimal Working Examples (MWE) for easy copy-pasting. As well as really understanding the code behind so you can create your own shortcodes.
-Index - Click to expand 📜 Go and Hugo code basics Shortcode templates vs call Go basics .Get Positional arguments Named arguments Both named and positional args if-else-end Details MWE Practical usage Declaration Parameters declaration Get values Render Docs Figure MWE Docs Declaration Gist shortcode Highlight MWE Syntax highlighting Declaration Instagram MWE Declaration Param MWE Declaration QR MWE Declaration Ref Relref Vimeo MWE Declaration X - Twitter MWE Declaration YouTube MWE Declaration Override a default shortcode Hugo Scroll Raw HTML contact_list email and phone extlink icon Go and Hugo code basics Basic coding skills are indispensable to understand later shortcode templates.">
+  <meta property="og:description" content="Step-by-step guide to use built-in Hugo shortcodes for tweets, Instagram, YouTube, code highlights, QR, figures,... and create your own custom shortcodes.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="blogs">
@@ -50,13 +49,11 @@ Index - Click to expand 📜 Go and Hugo code basics Shortcode templates vs call
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="http://localhost:1313/images/cover-image.jpg">
   <meta name="twitter:title" content="Hugo shortcodes: step by step">
-  <meta name="twitter:description" content="Hugo brings pre-defined shortcodes to expand your content beyond the basic markdown syntax. The official docs explain them quite well. The goal of this post is to distill the essential information into concise, ready-to-use Minimal Working Examples (MWE) for easy copy-pasting. As well as really understanding the code behind so you can create your own shortcodes.
-Index - Click to expand 📜 Go and Hugo code basics Shortcode templates vs call Go basics .Get Positional arguments Named arguments Both named and positional args if-else-end Details MWE Practical usage Declaration Parameters declaration Get values Render Docs Figure MWE Docs Declaration Gist shortcode Highlight MWE Syntax highlighting Declaration Instagram MWE Declaration Param MWE Declaration QR MWE Declaration Ref Relref Vimeo MWE Declaration X - Twitter MWE Declaration YouTube MWE Declaration Override a default shortcode Hugo Scroll Raw HTML contact_list email and phone extlink icon Go and Hugo code basics Basic coding skills are indispensable to understand later shortcode templates.">
+  <meta name="twitter:description" content="Step-by-step guide to use built-in Hugo shortcodes for tweets, Instagram, YouTube, code highlights, QR, figures,... and create your own custom shortcodes.">
 
 
   <meta itemprop="name" content="Hugo shortcodes: step by step">
-  <meta itemprop="description" content="Hugo brings pre-defined shortcodes to expand your content beyond the basic markdown syntax. The official docs explain them quite well. The goal of this post is to distill the essential information into concise, ready-to-use Minimal Working Examples (MWE) for easy copy-pasting. As well as really understanding the code behind so you can create your own shortcodes.
-Index - Click to expand 📜 Go and Hugo code basics Shortcode templates vs call Go basics .Get Positional arguments Named arguments Both named and positional args if-else-end Details MWE Practical usage Declaration Parameters declaration Get values Render Docs Figure MWE Docs Declaration Gist shortcode Highlight MWE Syntax highlighting Declaration Instagram MWE Declaration Param MWE Declaration QR MWE Declaration Ref Relref Vimeo MWE Declaration X - Twitter MWE Declaration YouTube MWE Declaration Override a default shortcode Hugo Scroll Raw HTML contact_list email and phone extlink icon Go and Hugo code basics Basic coding skills are indispensable to understand later shortcode templates.">
+  <meta itemprop="description" content="Step-by-step guide to use built-in Hugo shortcodes for tweets, Instagram, YouTube, code highlights, QR, figures,... and create your own custom shortcodes.">
   <meta itemprop="wordCount" content="8180">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
   <meta itemprop="keywords" content="Hugo shortcodes,Hugo templates,static site generator,custom shortcodes,built-in shortcodes,content creation,Markdown extensions,Go HTML templates,Hugo partials,dynamic content,figure shortcode,gist shortcode,highlight shortcode,tweet shortcode,YouTube embed,Hugo functions,layout components,DRY principles,web development,content management,Hugo documentation,code examples,responsive embeds,customizable content,Hugo power features">
