--- a/public/blogs/hugo_render_hooks/index.html
+++ b/public/blogs/hugo_render_hooks/index.html
@@ -16,26 +16,7 @@
   <meta name="description" content="Juan Marinero - Data Scientist"
 />
 
-  <meta name="keywords" content="          Juan, Marinero, Spain, Europe, Spanish, English, German, Deutsch, Bilingual,
-          Remote Work, Contract, Full-time, Part-time, Job, Job Offer, Data Scientist,
-          Data Science, Machine Learning, AI, Artificial Intelligence, Python, R, SQL, 
-          Statistical Analysis, Data Visualization, Big Data, Deep Learning, Neural Networks, 
-          Predictive Modeling, Data Mining, A/B Testing, Feature Engineering, MLOps, 
-          Natural Language Processing, NLP, Computer Vision, Time Series Analysis, 
-          Cloud Computing, AWS, Azure, GCP, Docker, Kubernetes, TensorFlow, PyTorch, 
-          Scikit-learn, Pandas, NumPy, Spark, Hadoop,
-          ETL, Data Pipelines, Business Intelligence, Analytics, Experimentation, 
-          Reinforcement Learning, Bayesian Statistics, Regression, Classification, 
-          Clustering, Dimensionality Reduction, Optimization, Juan Marinero, Spain, 
-          Europe, Data Scientist, ML Engineer, AI Specialist, Quantitative Analysis, 
-          Research, PhD, Mathematics, Statistics, Programming, Data Governance, 
-          Ethics in AI, Explainable AI, Model Deployment, CI/CD, Agile, Scrum, 
-          Startup, Tech, Consulting, Finance, Healthcare, E-commerce, Retail, 
-          Marketing Analytics, Customer Segmentation, Recommendation Systems, 
-          Anomaly Detection, Fraud Detection, IoT, Edge Computing, Open Source, 
-          GitHub, Kaggle, Competitions, Publications, Research Papers, Teaching, 
-          Mentoring, Public Speaking, Conferences, Workshops, Technical Writing
-        "
+  <meta name="keywords" content="Hugo Render Hooks, Hugo templates, customize Markdown, Markdown rendering, Goldmark, headless CMS, Hugo links, Hugo images, heading anchors, automatic link titles, Hugo theme development, override Markdown output, content styling, Hugo blocks, render-link hook, render-image hook, render-heading hook, Hugo best practices, web development, static site generator, custom attributes, Hugo advanced features, Hugo shortcodes"
 />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -87,6 +68,7 @@ Shortcodes:
 Used manually in content files. You control when and how they’re used. Ideal for complex elements/functionality: Complex layout like a multi-column section Dynamic data such as the latest blog posts list Embed a specific piece of non-markdown content. E.g., a specific video player or an interactive map. Use the {{&lt; ... &gt;}} syntax. Multiline {{&lt; details &gt;}}...{{&lt; /details &gt;}} or inline as {{&lt; qr text=&#34;https://gohugo.io&#34; &gt;}}. They allow custom Go HTML templates and complex logic, including calling Go functions. See the flowchart of the Highlight shortcode explanation: the template takes advantage of transform.go and highlight.go scripts. .Page.RenderString method, described in previous post, or other rendering methods can be applied within the shortcode to parse its inner content as Markdown. But they are optional. Shortcodes can be nested. Details here. Render Hooks:">
   <meta itemprop="wordCount" content="3192">
   <meta itemprop="image" content="http://localhost:1313/images/cover-image.jpg">
+  <meta itemprop="keywords" content="Hugo Render Hooks,Hugo templates,customize Markdown,Markdown rendering,Goldmark,headless CMS,Hugo links,Hugo images,heading anchors,automatic link titles,Hugo theme development,override Markdown output,content styling,Hugo blocks,render-link hook,render-image hook,render-heading hook,Hugo best practices,web development,static site generator,custom attributes,Hugo advanced features,Hugo shortcodes">
 
 
 
